--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Dependencies
-        run: npm install
-		
+        run: npm ci
+
       - name: Build
         run: npm run build
-		
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
